# docs/swagger.yaml
@@ -2,10 +2,23 @@ basePath: /
 consumes:
 - application/json
 definitions:
-  auth.AccessToken:
+  auth.AccessTokenResponse:
     properties:
       accessToken:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhbGciOiJIUzI1NiIsImV4cCI6MTc0NjAyMTY0NSwic3ViIjoiMDllMjNjNDAtM2JjMC00OTI0LWIxMDAtMmI3YjMyZDMxMGZlIn0.2ZSXXjxsLqeQOaovDU4tuj-8-6Hd7pUBxLpchURpWDU
         type: string
+    required:
+    - accessToken
+    type: object
+  auth.ApiKeyResponse:
+    properties:
+      apiKey:
+        description: ApiKey is a string formatted as "xxx.yyy" where "xxx" is a public
+          id, and "yyy" is a secret that is only stored encrypted on the server
+        example: fa40d13983db9cf8a19477d42f652726.37c476287cb99a1e6b1ad69006ad8c48d7c494368a21e16e5dbd2d29235de87b
+        type: string
+    required:
+    - apiKey
     type: object
   auth.LoginData:
     properties:
@@ -72,6 +85,26 @@ info:
   title: Auth Strategies Showcase
   version: "1"
 paths:
+  /auth/api-key:
+    get:
+      description: 'generate an API key for the authenticated user (WARNING: the key
+        will only be returned once and cannot be retrieved later!)'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.ApiKeyResponse'
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      security:
+      - session: []
+      summary: generate an API key for the authenticated user
+      tags:
+      - auth
   /auth/login:
     post:
       parameters:
@@ -153,7 +186,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/auth.AccessToken'
+            $ref: '#/definitions/auth.AccessTokenResponse'
         "401":
           description: Unauthorized
         "500":
@@ -161,6 +194,30 @@ paths:
       summary: exchange email and password for an access and refresh token
       tags:
       - auth
+  /user/api-key:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.GetUserInfoResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "500":
+          description: Internal Server Error
+      security:
+      - ApiKey: []
+      summary: fetch the authenticated user's first and last name - api key auth
+      tags:
+      - user
   /user/basic:
     get:
       produces:
@@ -236,6 +293,11 @@ paths:
 produces:
 - application/json
 securityDefinitions:
+  ApiKey:
+    description: API key passed in the X-API-Key header
+    in: header
+    name: X-API-Key
+    type: apiKey
   BasicAuth:
     type: basic
   Bearer:
